Fix game board aspect ratio and winning line alignment
Agent-Logs-Url: https://github.com/LuccaTi/Odin-Tic-Tac-Toe/sessions/3b5c6ac0-596b-45a3-8e99-302c12ec1850

--- a/style.css
+++ b/style.css
@@ -173,10 +173,12 @@ h3 {
   border: 1px solid black;
   border-radius: 1rem;
   padding: 1rem;
-  width: 50%;
-  height: 15rem;
+  width: 100%;
+  max-width: 15rem;
+  aspect-ratio: 1 / 1;
   gap: 0.5rem;
   position: relative;
+  margin: 0 auto;
 }
 
 .cell {
@@ -203,7 +205,7 @@ h3 {
 }
 
 .winning-line.row-0{
-  top: 20%;
+  top: calc(16.66% + 0.5rem);
   transform: translateY(-50%);
 }
 
@@ -213,12 +215,12 @@ h3 {
 }
 
 .winning-line.row-2 {
-  top: 80%;
+  top: calc(83.33% - 0.5rem);
   transform: translateY(-50%);
 }
 
 .winning-line.col-0 {
-  left: 16.66%;
+  left: calc(16.66% + 0.5rem);
   height: 100%;
   top: 0;
   width: 0.3rem;
@@ -234,7 +236,7 @@ h3 {
 }
 
 .winning-line.col-2 {
-  left: 83.33%;
+  left: calc(83.33% - 0.5rem);
   height: 100%;
   top: 0;
   width: 0.3rem;
@@ -242,16 +244,16 @@ h3 {
 }
 
 .winning-line.diag-0 {
-  width: 110%;
+  width: 130%;
   top: 50%;
-  left: -5%;
+  left: -15%;
   transform: translateY(-50%) rotate(45deg);
 }
 
 .winning-line.diag-1 {
-  width: 110%;
+  width: 130%;
   top: 50%;
-  left: -5%;
+  left: -15%;
   transform: translateY(-50%) rotate(-45deg);
 }
 
